--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="cafe-name">
     <p>Pune's Favourite</p>
     <h1>COFFEE HOUSE</h1>
-    <p>Brand Owned By: Mr. Pratik Yewale</p>
+    <p>Brand Owned By: Miss. Akanksha Bhalsing</p>
     <a id="footer-link" href="contact.html"><button id="all-button">CONTACT US</button></a>
     </div>
 
